# mcpdock

./: .gitignore  AGENTS.md  README.md  README_zh.md  biome.json  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: ci.yml  publish-packages.yml  release.yml
src/: App.vue  main.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  main_window.rs  process_env.rs  state.rs
src-tauri/src/commands/: capability.rs  gateway.rs  group.rs  import_export.rs  install_mode.rs  mcp.rs  mod.rs  settings.rs
src-tauri/src/db/: app_settings.rs  error.rs  mcp_capability.rs  mcp_group.rs  mcp_server.rs  mod.rs
src-tauri/src/gateway/: server.rs
src-tauri/src/gateway/handler/: global_handler.rs  mod.rs  prompts.rs  resources.rs  tools.rs
src-tauri/src/mcp/: runtime.rs
src-tauri/src/mcp/manager/: discovery.rs  mod.rs  runtime_state.rs  transport.rs
src/assets/: design.md
src/components/: AppSidebar.vue  GatewayStatus.vue  GroupManagement.vue  McpManagement.vue  PageHeader.vue  SettingsPage.vue  UpdateNotification.vue  WindowControls.vue
src/components/group/: GroupCard.vue  GroupForm.vue  GroupList.vue
src/components/mcp/: McpImportView.vue  McpServerCard.vue  McpServerForm.vue  McpServerList.vue  McpToolRunner.vue  shared.ts
src/i18n/: index.ts
src/locales/: en.ts  index.ts  zh-CN.ts
src/stores/: group.ts  mcp.ts  settings.ts  updater.ts
src/types/: group.ts  mcp.ts  settings.ts
